--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://database-cards.cuizsusoopda.us-east-1.rds.amazonaws.com:3306/cardsdb
+spring.datasource.username=admin
+spring.datasource.password=coldhottea
 
-server.port=9000
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+server.port=5000
 
 spring.application.name=cards
 spring.profiles.active=default
