--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://database-loans.cuizsusoopda.us-east-1.rds.amazonaws.com:3306/loansdb
+spring.datasource.username=admin
+spring.datasource.password=coldhottea
 
-server.port=8090
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+server.port=5002
 
 spring.application.name=loans
 spring.profiles.active=dev
